--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -21,51 +22,55 @@
             </ol>
         </nav>
         <h1>Общепромышленная вентиляция</h1>
+        <div class="filter-btn gradient-btn">
+            <i class="fas fa-filter"></i>
+            фильтры
+        </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4 col-lg-3">
                 <nav id="sidebar">
+                    <div class="filter-btn back-btn">
+                    </div>
                     <ul class="components">
                         <li>
-                            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
-                            <ul class="collapse list-unstyled" id="homeSubmenu">
+                            <a href="#" >Общепромышленная вентиляция</a>
+                        </li>
+                        <li>
+                            <a href="https://www.google.com/webhp?hl=ru&sa=X&ved=0ahUKEwi30dqp7vLiAhUt6KYKHf44CZIQPAgH">Противопожарное оборудование</a>
+                            <ul class="drop-menu">
                                 <li>
-                                    <a href="#">Home 1</a>
+                                    <a href="#">Вентиляторы дымоудаления </a>
                                 </li>
                                 <li>
-                                    <a href="#">Home 2</a>
+                                    <a href="#">Клапаны дымоудаления</a>
                                 </li>
                                 <li>
-                                    <a href="#">Home 3</a>
+                                    <a href="#">Клапаны огнезадерживающие</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">About</a>
+                            <a href="#">Оборудование для монтажа вентиляторов</a>
                         </li>
                         <li>
-                            <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
-                            <ul class="collapse list-unstyled" id="pageSubmenu">
-                                <li>
-                                    <a href="#">Page 1</a>
-                                </li>
-                                <li>
-                                    <a href="#">Page 2</a>
-                                </li>
-                                <li>
-                                    <a href="#">Page 3</a>
-                                </li>
-                            </ul>
+                            <a href="#">Кондиционеры центральные каркасные КЦК</a>
                         </li>
                         <li>
-                            <a href="#">Portfolio</a>
+                            <a href="">Сетевое оборудование</a>
                         </li>
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="#">Автоматизация</a>
+                        </li>
+                        <li>
+                            <a href="#">Отопительное оборудование</a>
+                        </li>
+                        <li>
+                            <a href="#">Скачать каталоги</a>
                         </li>
                     </ul>
                 </nav>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8 col-lg-9">
                 <div class="container">
                     <div class="catalog-item row">
                         <div class="col-md-3">
@@ -75,7 +80,14 @@
                             <h4>Кондиционеры центральные каркасные (приточные, приточно-вытяжные установки) типа КЦК</h4>
                             <p>Проектирование, производство, продажа и монтаж кондиционеров КЦК (кондиционеры центральные каркасные, приточные, приточно-вытяжные установки) в соответствии с ТУ У 29.2-24472991-020:2009.</p>
                         </div>
-                        <a href=""></a>
+                        <a class="link link--arrowed" href="#">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                                </g>
+                            </svg>
+                        </a>
                     </div>
                     <div class="catalog-item row">
                         <div class="col-md-3">
@@ -85,8 +97,33 @@
                             <h4>Кондиционеры центральные каркасные (приточные, приточно-вытяжные установки) типа КЦК</h4>
                             <p>Проектирование, производство, продажа и монтаж кондиционеров КЦК (кондиционеры центральные каркасные, приточные, приточно-вытяжные установки) в соответствии с ТУ У 29.2-24472991-020:2009.</p>
                         </div>
-                        <a href=""></a>
+                        <a class="link link--arrowed" href="#">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                                </g>
+                            </svg>
+                        </a>
                     </div>
+                    <div class="catalog-item row">
+                        <div class="col-md-3">
+                            <img src="media/catalog-img.png" alt="">
+                        </div>
+                        <div class="col-md-9">
+                            <h4>Кондиционеры центральные каркасные (приточные, приточно-вытяжные установки) типа КЦК</h4>
+                            <p>Проектирование, производство, продажа и монтаж кондиционеров КЦК (кондиционеры центральные каркасные, приточные, приточно-вытяжные установки) в соответствии с ТУ У 29.2-24472991-020:2009.</p>
+                        </div>
+                        <a class="link link--arrowed" href="#">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                                </g>
+                            </svg>
+                        </a>
+                    </div>
+
                 </div>
 
             </div>
@@ -146,6 +183,7 @@
 <script src="../js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
