--- a/index.html
+++ b/index.html
@@ -41,81 +41,82 @@
             <div class="logo-sm"><img src="media/logo-sm.svg" alt=""></div>
 
             <nav class="navbar-expand-xl navbar-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false"
+                        aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse " id="navbar">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link">О компании</a>
-                        <div class="drop-menu">
-                            <a class="dropdown-item" href="#">О нас</a>
-                            <a class="dropdown-item" href="#">Производство</a>
-                            <a class="dropdown-item" href="#">Сервис</a>
-                            <a class="dropdown-item" href="#">Стендовые испытания</a>
-                            <a class="dropdown-item" href="#">Вакансии</a>
-                        </div>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link">Каталог</a>
-                        <div class="drop-menu with-columns">
-                            <div class="menu-column">
-                                <a class="dropdown-item" href="#">Общепромышленная вентиляция </a>
-                                <ul>
-                                    <li><a href=" ">Вентиляторы радиальные</a></li>
-                                    <li><a href="">Вентиляторы крышные</a></li>
-                                    <li><a href="">Вентиляторы осевые</a></li>
-                                    <li><a href="">Вентиляторы канальные</a></li>
-                                </ul>
-                                <a class="dropdown-item" href="#">Противопожарное оборудование </a>
-                                <ul>
-                                    <li><a href=" ">Вентиляторы дымоудаления </a></li>
-                                    <li><a href="">Клапаны дымоудаления</a></li>
-                                    <li><a href="">Клапаны огнезадерживающие</a></li>
-                                </ul>
-                                <a class="dropdown-item" href="#">Оборудование для монтажа вентиляторов </a>
-                                <ul>
-                                    <li><a href=" ">Стаканы</a></li>
-                                    <li><a href="">Виброизоляторы и гибкие вставки</a></li>
-                                </ul>
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <a class="nav-link">О компании</a>
+                            <div class="drop-menu">
+                                <a class="dropdown-item" href="#">О нас</a>
+                                <a class="dropdown-item" href="#">Производство</a>
+                                <a class="dropdown-item" href="#">Сервис</a>
+                                <a class="dropdown-item" href="#">Стендовые испытания</a>
+                                <a class="dropdown-item" href="#">Вакансии</a>
                             </div>
-                            <div class="menu-column">
-                                <a class="dropdown-item" href="#">Кондиционеры центральные каркасные КЦК</a>
-                                <a class="dropdown-item" href="#">Сетевое оборудование</a>
-                                <ul>
-                                    <li><a href=" ">Клапаны и заслонки </a></li>
-                                    <li><a href="">Узлы прохода, дефлекторы, зонты, двери, шумоглушители </a></li>
-                                    <li><a href="">Фильтры, ИРП</a></li>
-                                </ul>
-                                <a class="dropdown-item" href="#">Автоматизация </a>
-                                <a class="dropdown-item" href="#">Отопительное оборудование  </a>
-                                <ul>
-                                    <li><a href=" ">Агрегаты воздушно-отопительные  </a></li>
-                                    <li><a href="">Воздухонагреватель (калориферы) </a></li>
-                                </ul>
-                                <a class="dropdown-item" href="#">Скачать каталоги</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link">Каталог</a>
+                            <div class="drop-menu with-columns">
+                                <div class="menu-column">
+                                    <a class="dropdown-item" href="#">Общепромышленная вентиляция </a>
+                                    <ul>
+                                        <li><a href=" ">Вентиляторы радиальные</a></li>
+                                        <li><a href="">Вентиляторы крышные</a></li>
+                                        <li><a href="">Вентиляторы осевые</a></li>
+                                        <li><a href="">Вентиляторы канальные</a></li>
+                                    </ul>
+                                    <a class="dropdown-item" href="#">Противопожарное оборудование </a>
+                                    <ul>
+                                        <li><a href=" ">Вентиляторы дымоудаления </a></li>
+                                        <li><a href="">Клапаны дымоудаления</a></li>
+                                        <li><a href="">Клапаны огнезадерживающие</a></li>
+                                    </ul>
+                                    <a class="dropdown-item" href="#">Оборудование для монтажа вентиляторов </a>
+                                    <ul>
+                                        <li><a href=" ">Стаканы</a></li>
+                                        <li><a href="">Виброизоляторы и гибкие вставки</a></li>
+                                    </ul>
+                                </div>
+                                <div class="menu-column">
+                                    <a class="dropdown-item" href="#">Кондиционеры центральные каркасные КЦК</a>
+                                    <a class="dropdown-item" href="#">Сетевое оборудование</a>
+                                    <ul>
+                                        <li><a href=" ">Клапаны и заслонки </a></li>
+                                        <li><a href="">Узлы прохода, дефлекторы, зонты, двери, шумоглушители </a></li>
+                                        <li><a href="">Фильтры, ИРП</a></li>
+                                    </ul>
+                                    <a class="dropdown-item" href="#">Автоматизация </a>
+                                    <a class="dropdown-item" href="#">Отопительное оборудование </a>
+                                    <ul>
+                                        <li><a href=" ">Агрегаты воздушно-отопительные </a></li>
+                                        <li><a href="">Воздухонагреватель (калориферы) </a></li>
+                                    </ul>
+                                    <a class="dropdown-item" href="#">Скачать каталоги</a>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Программы подбора</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Сертификаты</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Новости</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link">Контакты</a>
-                        <div class="drop-menu">
-                            <a class="dropdown-item" href="#">1</a>
-                            <a class="dropdown-item" href="#">2</a>
-                            <a class="dropdown-item" href="#">3</a>
-                            <a class="dropdown-item" href="#">4</a>
-                        </div>
-                    </li>
-                </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Программы подбора</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Сертификаты</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Новости</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Контакты</a>
+                            <div class="drop-menu">
+                                <a class="dropdown-item" href="#">1</a>
+                                <a class="dropdown-item" href="#">2</a>
+                                <a class="dropdown-item" href="#">3</a>
+                                <a class="dropdown-item" href="#">4</a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </nav>
 
@@ -207,17 +208,26 @@
             <div class="card"><a href="">
                 <img src="media/home-catalog/4.png" alt="">
                 <p>Общепромышленная вентиляция</p>
+                <div class="go-corner">
+                    <div class="go-arrow">→</div>
+                </div>
             </a>
             </div>
             <div class="card"><a href="">
                 <img src="media/home-catalog/91.png" alt="">
                 <p>Противопожарное оборудование</p>
+                <div class="go-corner">
+                    <div class="go-arrow">→</div>
+                </div>
             </a>
             </div>
 
             <div class="card"><a href="">
                 <img src="media/home-catalog/100.png" alt="">
                 <p>Оборудование для монтажа вентиляторов</p>
+                <div class="go-corner">
+                    <div class="go-arrow">→</div>
+                </div>
             </a>
             </div>
 
@@ -225,12 +235,18 @@
             <div class="card"><a href="">
                 <img src="media/home-catalog/category10.png" alt="">
                 <p>Кондиционеры центральные каркасные КЦК</p>
+                <div class="go-corner">
+                    <div class="go-arrow">→</div>
+                </div>
             </a>
             </div>
 
             <div class="card"><a href="">
                 <img src="media/home-catalog/74.png" alt="">
                 <p>Сетевое оборудование</p>
+                <div class="go-corner">
+                    <div class="go-arrow">→</div>
+                </div>
             </a>
             </div>
 
@@ -238,18 +254,27 @@
             <div class="card"><a href="">
                 <img src="media/home-catalog/category12.png" alt="">
                 <p>Автоматизация</p>
+                <div class="go-corner">
+                    <div class="go-arrow">→</div>
+                </div>
             </a>
             </div>
 
             <div class="card"><a href="">
                 <img src="media/home-catalog/5.png" alt="">
                 <p>Отопительное оборудование</p>
+                <div class="go-corner">
+                    <div class="go-arrow">→</div>
+                </div>
             </a>
             </div>
 
             <div class="card"><a href="">
                 <img src="media/home-catalog/74.png" alt="">
                 <p>Скачать каталоги</p>
+                <div class="go-corner">
+                    <div class="go-arrow">→</div>
+                </div>
             </a>
             </div>
 
@@ -263,13 +288,27 @@
                 <span>24/04/2019</span>
                 <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
                     сечения КО 100</p>
-                <a href=""></a></div>
+                <a class="link link--arrowed" href="#">
+                    <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                            <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                            <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                        </g>
+                    </svg>
+                </a></div>
             <div class="card">
                 <img src="" alt="">
                 <span>24/04/2019</span>
                 <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого
                     сечения КО 100</p>
-                <a href=""></a></div>
+                <a class="link link--arrowed" href="">
+                    <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                            <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                            <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                        </g>
+                    </svg>
+                </a></div>
             <div class="card-column">
                 <div class="card card-sm">
                     <img src="media/home-newes1.png" alt="">
@@ -278,7 +317,14 @@
                         <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
                             круглого сечения КО 100</p>
                     </div>
-                    <a href=""></a>
+                    <a class="link link--arrowed" href="">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                            </g>
+                        </svg>
+                    </a>
                 </div>
                 <div class="card card-sm">
                     <!--                    <img src="" alt="">-->
@@ -288,7 +334,14 @@
                             круглого сечения КО 100</p>
                     </div>
 
-                    <a href=""></a>
+                    <a class="link link--arrowed" href="">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                            <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                            </g>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </div>
